# nomai

./: LICENSE  README.md  pyproject.toml
examples/: AUTOENCODER_demo.py  MLP_demo.py  RESIDUAL_CNN_demo.py
macrograd/: core.py
macrograd/examples/: MLP.py
macrograd/macrograd/: __init__.py  functional.py  nn.py  optim.py  pyproject.toml
macrograd/macrograd/tests/: test.py
nomai/: __init__.py  core.py  data_loaders.py  functional.py  losses.py  metrics.py  nn.py  numpy.py  optimizers.py  structs.py  w_inits.py
nomai/examples/: MLP.py  transformer.py
nomai/tests/: test.py
