[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomai"
version = "0.1.0"
description = "A minimal deep learning framework built from scratch in JAX with Equinox."
authors = [
    {name = "polyrhachis", email = "polyrhachiss@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "equinox"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/polyrhachis/nomai"
Repository = "https://github.com/polyrhachis/nomai"

[tool.setuptools]
packages = ["nomai"]