[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomai"
version = "0.1.0"
description = "A lightweight autograd engine inspired by PyTorch"
authors = [{name = "Polyrhachis"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=12.0.0,<14.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0"
]

